test/data/invalid_models/include_with_invalid_element/model.sdf
<?xml version="1.0" ?>
<sdf version="1.5">
    <model name="simple test model">
        <include>
            <uri>model://simple_model</uri>
            <invalid></invalid>
        </include>
    </model>
</sdf>
